--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,7 @@ header{
   /* YOUR CODE HERE; */
   grid-column: 1 / -1;
   grid-row: 1 / span 1;
+  background-repeat: no-repeat;
   background-image: url("../images/header.jpg");
 }
 
